[tool.poetry]
name = "python-facebook-api"
version = "0.11.1"
description = "A simple Python wrapper around the Facebook Graph API"
authors = ["Ikaros kun <merle.liukun@gmail.com>"]
readme = "README.rst"
license = "Apache-2.0"
repository = 'https://github.com/sns-sdks/python-facebook'
homepage = "https://github.com/sns-sdks/python-facebook"
keywords = ["facebook-graph-api", "facebook-sdk", "instagram-api", "instagram-sdk", "facebook-api"]
classifiers = [
    # see https://pypi.org/pypi?%3Aaction=list_classifiers
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
]

packages = [
    { include = "pyfacebook" },
    { include = "tests", format = "sdist" },
]


[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.24.0"
requests-oauthlib = "^1.3.0"
dataclasses-json = "^0.5.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6.11"
pytest-cov = "^2.10.1"
responses = ">=0.11"
tox = "^3.20.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
